--- a/src/content/meetings/2024-03-01.mdx
+++ b/src/content/meetings/2024-03-01.mdx
@@ -1,8 +1,10 @@
 ---
 title: March 2024
 pubDate: 2024-03-01T10:30:00+11:00
-description: 'Diabetes Australia: Ways to prevent or live with Diabetes, Financial Literacy discussion by Robert Barnes, Superguide.com.au'
+description: 'Diabetes Australia: Ways to prevent or live with Diabetes; Financial Literacy discussion by Robert Barnes, Superguide.com.au'
 ---
+
+import Gallery from '../../components/gallery.astro'
 
 # March meeting Update from AIR Sydney Hills Branch
 
@@ -10,14 +12,16 @@ Our next meeting for 2024 will be held on Friday morning March 1st 2024 at Beecr
 
 ## 10:45am: Diabetes Australia: Ways to prevent or live with Diabetes
 
-![Vania Khoury](artworks-000046743310-u8hv4w-t500x500.jpg)
-![Living with Diabetes](Living-with-diabetes-3-tile-380x450px.jpg)
+import img1 from '../../assets/images/2024-03-khoury.jpg'
+import img2 from '../../assets/images/2024-03-diabetes-2.jpg'
+
+<Gallery images={[img1, img2]} />
 
 Diabetes Australia Health Professional Vania Khoury will lead a general discussion on diabetes, the treatment options, exercises for those with diabetes and ways to help prevent it. A Q&A session will follow
 
 ## 12:30pm: Financial Literacy discussion by Robert Barnes, Superguide.com.au
 
-![Superguide](superguide-news-mar-23.png.webp)
+![Superguide](../../assets/images/2024-03-superguide.webp)
 
 Robert is the GM of Superguide.com.au, the most visited superannuation information website in Australia. Robert will discuss how this service improves Financial Literacy about Superannuation. He will cover How super works, Investing strategies, Retirement planning & Estate planning and more.
 
