--- a/src/content/meetings/2024-03-11.md
+++ b/src/content/meetings/2024-03-11.md
@@ -12,6 +12,7 @@ Our next meeting for 2024 will be held on Friday morning April 5th2024 at Beecro
 
 Today we hold our general members forum, where members share knowledge on key topics or ask the Branch to look at issues that need advocacy. Topics: Key challenges in retirement. Such as: moving house, decluttering, downsizing, finding a purpose, learning new skills, finally starting a long-held interest. 
 
+![](../../assets/images/2024-04-members.png)
 
 ## 12:30pm: Finance Discussion Group: Members Financial Forum
 
@@ -25,8 +26,8 @@ Such as:
 * taxation issues, dealing with Centrelink
 * Estate planning
 
-## Meeting details 
+## Meeting details
 
 AIR Sydney Hills branch meets at 10:30 on the first Friday of the month, with our Investors Discussion Group meeting at 12:30. We use a Zoom connection for those unable to make it physically.
- 
+
 DISCLAIMER: While our speakers may be licensed Financial Advisors, this information does NOT constitute Personal Financial Advice.
