Updated meeting badge logic

--- a/src/content/meetings/2024-04-05.md
+++ b/src/content/meetings/2024-04-05.md
@@ -4,15 +4,15 @@ pubDate: 2024-04-04T23:30:00.000Z
 description: "General meeting: Members discussion forum; Finance Discussion
   Group: Members Financial Forum"
 ---
-# March meeting Update from AIR Sydney Hills Branch
+# April meeting Update from AIR Sydney Hills Branch
 
-Our next meeting for 2024 will be held on Friday morning April 5th2024 at Beecroft Presbyterian Church Hall at 10:30 for a 10:45 start. The Investors Discussion group will follow at 12:30pm after refreshments.
+Our next meeting for 2024 will be held on Friday morning April 5th 2024 at Beecroft Presbyterian Church Hall at 10:30 for a 10:45 start. The Investors Discussion group will follow at 12:30pm after refreshments.
 
 ## 10:45am: General meeting: Members discussion forum
 
 Today we hold our general members forum, where members share knowledge on key topics or ask the Branch to look at issues that need advocacy. Topics: Key challenges in retirement. Such as: moving house, decluttering, downsizing, finding a purpose, learning new skills, finally starting a long-held interest. 
 
-![](../../assets/images/2024-04-members.png)
+![Members](../../assets/images/2024-04-members.png)
 
 ## 12:30pm: Finance Discussion Group: Members Financial Forum
 
