--- a/src/content/meetings/2024-04-05.md
+++ b/src/content/meetings/2024-04-05.md
@@ -1,30 +1,31 @@
 ---
 title: April 2024
 pubDate: 2024-04-05T10:30:00+11:00
-description: "General meeting: Members discussion forum; Finance Discussion
-  Group: Members Financial Forum"
+description: 'General meeting: Members discussion forum; Finance Discussion
+  Group: Members Financial Forum'
 ---
+
 # April meeting Update from AIR Sydney Hills Branch
 
 Our next meeting for 2024 will be held on Friday morning April 5th 2024 at Beecroft Presbyterian Church Hall at 10:30 for a 10:45 start. The Investors Discussion group will follow at 12:30pm after refreshments.
 
 ## 10:45am: General meeting: Members discussion forum
 
-Today we hold our general members forum, where members share knowledge on key topics or ask the Branch to look at issues that need advocacy. Topics: Key challenges in retirement. Such as: moving house, decluttering, downsizing, finding a purpose, learning new skills, finally starting a long-held interest. 
+Today we hold our general members forum, where members share knowledge on key topics or ask the Branch to look at issues that need advocacy. Topics: Key challenges in retirement. Such as: moving house, decluttering, downsizing, finding a purpose, learning new skills, finally starting a long-held interest.
 
 ![Members](../../assets/images/2024-04-members.png)
 
 ## 12:30pm: Finance Discussion Group: Members Financial Forum
 
-Today members share knowledge on key topics of interest in Finance. 
+Today members share knowledge on key topics of interest in Finance.
 
 Such as:
 
-* running out of savings
-* investment returns
-* asset allocation & diversification
-* taxation issues, dealing with Centrelink
-* Estate planning
+- running out of savings
+- investment returns
+- asset allocation & diversification
+- taxation issues, dealing with Centrelink
+- Estate planning
 
 ## Meeting details
 
