Updated to June 2024

--- a/src/content/meeting/2024-03-01.md
+++ b/src/content/meeting/2024-03-01.md
@@ -6,23 +6,23 @@ description: 'Diabetes Australia: Ways to prevent or live with Diabetes; Financi
 
 # March meeting Update from AIR Sydney Hills Branch
 
-Our next meeting for 2024 will be held on Friday morning March 1st 2024 at Beecroft Presbyterian Church Hall at 10:30 for a 10:45 start. The Investors Discussion group will follow at 12:30pm after refreshments.
+Our March meeting for 2024 was held on Friday morning March 1st 2024 at Beecroft Presbyterian Church Hall at 10:30 for a 10:45 start. The Investors Discussion group then followed at 12:30pm after refreshments.
 
 ## 10:45am: Diabetes Australia: Ways to prevent or live with Diabetes
 
 ![Vania Khoury](../../assets/images/2024-03-khoury.jpg)
 
-Diabetes Australia Health Professional Vania Khoury will lead a general discussion on diabetes, the treatment options, exercises for those with diabetes and ways to help prevent it. A Q&A session will follow
+Diabetes Australia Health Professional Vania Khoury led a general discussion on diabetes, the treatment options, exercises for those with diabetes and ways to help prevent it. A Q&A session followed.
 
 ## 12:30pm: Financial Literacy discussion by Robert Barnes, Superguide.com.au
 
 ![Superguide](../../assets/images/2024-03-superguide.webp)
 
-Robert is the GM of Superguide.com.au, the most visited superannuation information website in Australia. Robert will discuss how this service improves Financial Literacy about Superannuation. He will cover How super works, Investing strategies, Retirement planning & Estate planning and more.
+Robert is the GM of Superguide.com.au, the most visited superannuation information website in Australia. Robert discussed how this service improves Financial Literacy about Superannuation. He covered How super works, Investing strategies, Retirement planning & Estate planning and more.
 
 Robert also operates Pension Help Australia, helping people interact with Centrelink to obtain Age Pension and Commonwealth Seniors Heath Card benefits.
 
-A Q&A session will follow
+A Q&A session followed.
 
 ## Meeting details
 
