--- a/src/content/meeting/2024-04-05.md
+++ b/src/content/meeting/2024-04-05.md
@@ -7,25 +7,34 @@ description: 'General meeting: Members discussion forum; Finance Discussion
 
 # April meeting Update from AIR Sydney Hills Branch
 
-Our next meeting for 2024 will be held on Friday morning April 5th 2024 at Beecroft Presbyterian Church Hall at 10:30 for a 10:45 start. The Investors Discussion group will follow at 12:30pm after refreshments.
+Our next meeting for 2024 was held on Friday morning April 5th 2024 at Beecroft Presbyterian Church Hall at 10:30 for a 10:45 start. The Investors Discussion group followed at 12:30pm after refreshments.
 
 ## 10:45am: General meeting: Members discussion forum
 
-Today we hold our general members forum, where members share knowledge on key topics or ask the Branch to look at issues that need advocacy. Topics: Key challenges in retirement. Such as: moving house, decluttering, downsizing, finding a purpose, learning new skills, finally starting a long-held interest.
+Today we held our general members forum, where members shared knowledge on key topics or ask the Branch to look at issues that need advocacy.
 
-![Members](../../assets/images/2024-04-members.png)
+Topic: Key challenges in retirement, such as:
+
+- moving house,
+- decluttering,
+- downsizing,
+- finding a purpose,
+- learning new skills,
+- finally starting a long-held interest.
+
+![Members](../../assets/images/IMG_6700.jpg)
 
 ## 12:30pm: Finance Discussion Group: Members Financial Forum
 
-Today members share knowledge on key topics of interest in Finance.
-
-Such as:
+Today members shared knowledge on key topics of interest in Finance, such as:
 
 - running out of savings
 - investment returns
 - asset allocation & diversification
 - taxation issues, dealing with Centrelink
 - Estate planning
+
+![Members](../../assets/images/IMG_6701.jpg)
 
 ## Meeting details
 
