--- a/src/content/meeting/2024-06-07.md
+++ b/src/content/meeting/2024-06-07.md
@@ -1,24 +1,15 @@
 ---
 title: June 2024
 pubDate: 2024-06-07T10:30:00+10:00
-description: 'Living Well with Parkinsons; Deep Dive on Aged Care Fees'
+description: Deep Dive on Aged Care Fees by Liz Holland, Aged Care Financial
+  Advisor, Prime Advisory
+image: ../../assets/images/2024-07-holland.jpeg
 ---
-
 # June meeting Update from AIR Sydney Hills Branch
 
 Our next meeting for 2024 will be held on Friday morning June 7th 2024 at Beecroft Presbyterian Church Hall at 10:30 for a 10:45 start. The Investors Discussion group will follow at 12:30pm after refreshments.
 
-## 10:45am: General meeting: Living Well with Parkinsons, Christine McGee (Educator, Parkinsons NSW)
-
-![Parkinsons](../../assets/images/Living-Well-with-Parkinsons.png)
-
-Christine McGee, the education coordinator for Parkinson’s NSW, will run an information morning on Living Well with Parkinsons. There will be particular attention to the practical aspects of care.
-
-![Christine McGee](../../assets/images/Christine-McGee.jpg)
-
-A Q&A session will follow,
-
-## 12:30pm: Finance Discussion Group: Deep Dive on Aged Care Fees by Liz Holland, Aged Care Financial Advisor (Prime Advisory)
+## 10:45am: Deep Dive on Aged Care Fees by Liz Holland, Aged Care Financial Advisor (Prime Advisory)
 
 ![Aged Care Fees](../../assets/images/Deep-Dive-into-Aged-Care-Fees.png)
 
@@ -27,6 +18,13 @@ The Federal government has said that 'wealthy' retirees will pay more for aged/h
 Liz will describe in detail how the aged care fees and charges work, including means testing of income and assets, the family home implications & how the various fees are worked out. Information on government funding, aged care provider billing and future plans to phase out Refundable Accommodation Deposits will also be provided. A Q&A session will follow
 
 ![Liz Holland](../../assets/images/Liz-Holland.jpg)
+
+
+## 12:30pm: Round table to discuss our position on Aged Care costs
+
+The federal government has said that more funding is required to improve the quality of aged care. In addition to higher co-contributions from self-funded retirees, the government will need to increase tax revenue to fund better aged care.
+
+AIR intends to suggest some possible revenue options to the government and needs member input via a round-table branch discussion group meeting. 
 
 ## Meeting details
 
