--- a/src/content/meeting/2024-06-07.md
+++ b/src/content/meeting/2024-06-07.md
@@ -15,10 +15,9 @@ Our next meeting for 2024 will be held on Friday morning June 7th 2024 at Beecro
 
 The Federal government has said that 'wealthy' retirees will pay more for aged/home care but have not defined who is wealthy & how much they will pay. Retirees are very concerned.
 
-Liz will describe in detail how the aged care fees and charges work, including means testing of income and assets, the family home implications & how the various fees are worked out. Information on government funding, aged care provider billing and future plans to phase out Refundable Accommodation Deposits will also be provided. A Q&A session will follow
+Liz will describe in detail how the aged care fees and charges work, including means testing of income and assets, the family home implications & how the various fees are worked out. Information on government funding, aged care provider billing and future plans to phase out Refundable Accommodation Deposits will also be provided. A Q&A session will follow for visitors
 
 ![Liz Holland](../../assets/images/Liz-Holland.jpg)
-
 
 ## 12:30pm: Round table to discuss our position on Aged Care costs
 
