Update to Aug 2024 meeting

--- a/src/content/meeting/2023-11-03.md
+++ b/src/content/meeting/2023-11-03.md
@@ -6,7 +6,7 @@ description: 'Beecroft Fire Station – How to be ready for Fire Season; Introdu
 
 # November meeting Update from AIR Sydney Hills Branch
 
-Our meeting was held on Friday morning November 3rd 2023 at Beecroft Presbyterian Church Hall at10:30 for a 10:45 start with the Investors Discussion group following at 12:30pm after refreshments.
+Our November meeting was held on Friday morning November 3rd 2023 at Beecroft Presbyterian Church Hall at10:30 for a 10:45 start with the Investors Discussion group following at 12:30pm after refreshments.
 
 ## 10:45am: Beecroft Fire Station – How to be ready for Fire Season
 
