--- a/src/content/meeting/2023-12-01.md
+++ b/src/content/meeting/2023-12-01.md
@@ -29,7 +29,7 @@ images:
 
 # December meeting Update from AIR Sydney Hills Branch
 
-Our meeting was held on Friday morning December 1st 2023 at Beecroft Presbyterian Church at 10:30 for a 10:45 start. This was followed afterwards with our Christmas lunch.
+Our December meeting was held on Friday morning December 1st 2023 at Beecroft Presbyterian Church at 10:30 for a 10:45 start. This was followed afterwards with our Christmas lunch.
 
 ## 10:45am: Unusual ideas for Travel
 
