--- a/src/content/meeting/2024-04-05.md
+++ b/src/content/meeting/2024-04-05.md
@@ -7,7 +7,7 @@ description: 'General meeting: Members discussion forum; Finance Discussion
 
 # April meeting Update from AIR Sydney Hills Branch
 
-Our next meeting for 2024 was held on Friday morning April 5th 2024 at Beecroft Presbyterian Church Hall at 10:30 for a 10:45 start. The Investors Discussion group followed at 12:30pm after refreshments.
+Our April meeting for 2024 was held on Friday morning April 5th 2024 at Beecroft Presbyterian Church Hall at 10:30 for a 10:45 start. The Investors Discussion group followed at 12:30pm after refreshments.
 
 ## 10:45am: General meeting: Members discussion forum
 
