--- a/src/content/meeting/2024-06-07.md
+++ b/src/content/meeting/2024-06-07.md
@@ -8,7 +8,7 @@ image: ../../assets/images/2024-07-holland.jpeg
 
 # June meeting Update from AIR Sydney Hills Branch
 
-Our next meeting for 2024 will be held on Friday morning June 7th 2024 at Beecroft Presbyterian Church Hall at 10:30 for a 10:45 start. The Investors Discussion group will follow at 12:30pm after refreshments.
+Our June meeting for 2024 was held on Friday morning June 7th 2024 at Beecroft Presbyterian Church Hall at 10:30 for a 10:45 start. The Investors Discussion group followed at 12:30pm after refreshments.
 
 ## 10:45am: Deep Dive on Aged Care Fees by Liz Holland, Aged Care Financial Advisor (Prime Advisory)
 
@@ -16,7 +16,7 @@ Our next meeting for 2024 will be held on Friday morning June 7th 2024 at Beecro
 
 The Federal government has said that 'wealthy' retirees will pay more for aged/home care but have not defined who is wealthy & how much they will pay. Retirees are very concerned.
 
-Liz will describe in detail how the aged care fees and charges work, including means testing of income and assets, the family home implications & how the various fees are worked out. Information on government funding, aged care provider billing and future plans to phase out Refundable Accommodation Deposits will also be provided. A Q&A session will follow for visitors
+Liz described in detail how the aged care fees and charges work, including means testing of income and assets, the family home implications & how the various fees are worked out. Information on government funding, aged care provider billing and future plans to phase out Refundable Accommodation Deposits will also be provided. A Q&A session followed for visitors
 
 ![Liz Holland](../../assets/images/Liz-Holland.jpg)
 
@@ -24,7 +24,7 @@ Liz will describe in detail how the aged care fees and charges work, including m
 
 The federal government has said that more funding is required to improve the quality of aged care. In addition to higher co-contributions from self-funded retirees, the government will need to increase tax revenue to fund better aged care.
 
-AIR intends to suggest some possible revenue options to the government and needs member input via a round-table branch discussion group meeting.
+AIR intends to suggest some possible revenue options to the government and solicited member input via a round-table branch discussion group meeting.
 
 ## Meeting details
 
