--- a/src/content/meeting/2024-08-02.md
+++ b/src/content/meeting/2024-08-02.md
@@ -4,7 +4,6 @@ pubDate: 2024-08-02T10:30:00+10:00
 description: Living Well with Parkinsons; Listed Investment Companies & Trusts
 image: ../../assets/images/2024-08-02-cover.jpeg
 ---
-
 # August meeting Update from AIR Sydney Hills Branch
 
 Our August meeting was held on Friday morning August 2nd 2024 at Beecroft Presbyterian Church Hall at 10:30 for a 10:45 start.
@@ -22,6 +21,8 @@ Christine McGee, the education coordinator for Parkinson’s NSW, will run an in
 ![Ian Irvine](../../assets/images/2024-08-02-ian-irvine.png)
 
 Ian Irvine CEO of the Listed Investment Companies and Trusts Association will outline how listed investment companies and trusts can enable both active and passive investments and how they operate.
+
+![Attendees to the meeting](../../assets/images/2024-08-02-attendees.jpeg)
 
 ## Meeting details
 
